Changelog
=========

5.8-dev - (unreleased)
----------------------

5.7 - (2013-05-20)
------------------
* Bug fix: add also countries from Asia for the Pan-Europe group when using 
  the geotags edit widget since the search was restricted to the Europe 
  Continent
  [ichimdav #14329]
* Feature: Removed lovely.memcached dependency
  [voineali refs #14343]

5.6 - (2013-04-17)
------------------
* Feature: Added possibility to specify dimensions of map modal popup when
  adding geotags macro to any template
  [ichimdav #8523]
* Bug fix: fixed issue where clicking on a geotags like Norway took you to
  Denmark since they have the same x coordinate and the check for geometry was
  only done on the x coordinate
  [ichimdav #8523]
* Bug fix: fixed issue where map infoTemplate displayed undefined as header
  text when itemTitle returned undefined
  [ichimdav refs #8523]
* Bug fix: better fix for loading of geotagsClusterLayer.js
  [ichimdav #8523]

5.5 - (2013-03-15)
------------------
* Bug fix: load geotagsClusterLayer using dojo.require instead of loading it
  with portal_javascripts
  [ichimdav #14039]

5.4 - (2013-01-25)
------------------
* Bug fix: fix location field @@rdf output
  [tiberich #13694]

5.3 - (2013-01-15)
------------------
* Bug fix: drill down geotags categories now return alphabetically sorted
  results
  [ichimdav #9989]
* Feature: added a checkbox enabled by default that will add  individual
  countries that are part of a country group instead of the group itself
  [ichimdav #9998]
* Feature: added point clustering support to map view
  [ichimdav #7337]
* Change: switched to version 2.8 of the arcgis Dojo library in order to have
  clustering support
  [ichimdav #7337]

5.2 - (2012-11-26)
------------------
* Bug fix: rdfencode geotags as geo:SpatialThing to stay generic,
  since not all geotags are points, can also be Features/Polygons etc.
  [demarant refs #7409]

5.1 - (2012-11-22)
------------------