@@ -1549,6 +1549,14 @@ EEAGeotags.View = function(context, options){
   self.context.parent().addClass('eea-geotags-view');
   self.settings = {};
 
+  if(!self.context.attr('id')){
+      self.context.attr({id: self.context.attr('id') + self.id});
+      self.id = '#' + self.context.attr('id') + self.count;
+  }
+  else {
+      self.id = '#' + self.context.attr('id');
+  }
+
   if(options){
     jQuery.extend(self.settings, options);
   }
@@ -1576,7 +1584,7 @@ EEAGeotags.View.prototype = {
         eea_location_links_length = eea_location_links.length,
         eea_location_data = eea_location.data();
         self.modal = eea_location_links_length  ? eea_location_data.modal : "Events";
-        self.map_div = jQuery("#eeaEsriMap");
+        self.map_div = jQuery(self.id);
     if( (self.modal !== "False" && self.modal !== "Events") || (eea_location_links_length < 4 && self.modal !== "Events")){
         var dialogBox,
             eea_location_offset = eea_location.is(':visible') ? eea_location.offset() : eea_location.closest(':visible').offset(),
@@ -1601,7 +1609,7 @@ EEAGeotags.View.prototype = {
                                                     height: eea_location_data.modal_dimensions[1]});
                 // resize map root to fit the designated space of #content
                 // without scrollbars
-                self.map_div.find('#eeaEsriMap_root').css({width: '100%', height: '100%'});
+                self.map_div.find(self.id +'_root').css({width: '100%', height: '100%'});
 
             }
             else {
@@ -1619,7 +1627,7 @@ EEAGeotags.View.prototype = {
   showLoading: function(){
     var loading;
     var self = this;
-    loading = jQuery('#eeaEsriMapLoadingImg')[0];
+    loading = jQuery('#' + self.id + 'LoadingImg')[0];
     esri.show(loading);
     self.disableMapNavigation();
     self.hideZoomSlider();
@@ -1629,7 +1637,7 @@ EEAGeotags.View.prototype = {
   hideLoading: function(){
     var loading;
     var self = this;
-    loading = jQuery('#eeaEsriMapLoadingImg')[0];
+    loading = jQuery('#' + self.id + 'LoadingImg')[0];
     esri.hide(loading);
     self.enableMapNavigation();
     self.showZoomSlider();
@@ -1644,6 +1652,10 @@ EEAGeotags.View.prototype = {
     locationTagsLen = locationTags ? locationTags.length : 0;
 
     context_url = window.location.protocol + '//' + window.location.host + window.location.pathname;
+    // remove /view if page is called with it
+    if(context_url.endswith('/view')){
+        context_url = context_url.replace(/\/view$/g, '');
+    }
 
     infoSymbol = new esri.symbol.SimpleMarkerSymbol().setSize(10).setColor(new dojo.Color('#B1C748'));
     var infotemplate = map_points.length ? '${Title}<img src="${Url}/image_thumb" class="esriInfoImg" />': '${Addr}';
@@ -1752,7 +1764,7 @@ EEAGeotags.View.prototype = {
             geometry = esri.geometry.geographicToWebMercator(geometry);
             var name = item.itemType || 'Location',
                 itemUrl = item.itemUrl || context_url,
-                icon = item.itemIcon || itemUrl + '/image_listing',
+                icon = item.itemIcon || itemUrl + "/image_listing",
                 addr = decodeURIComponent(item.properties.description) || decodeURIComponent(item.properties.title),
                 itemDate = item.itemDate,
                 itemDescription = item.itemDescription,
@@ -1873,7 +1885,8 @@ EEAGeotags.View.prototype = {
     initExtent = new esri.geometry.Extent({"xmin": -171, "ymin":-330, "xmax":240, "ymax":140, "spatialReference":{"wkid": 102100}});
     geometricExtent = esri.geometry.geographicToWebMercator(initExtent);
     basemap = new esri.layers.ArcGISTiledMapServiceLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer');
-    self.map = new esri.Map('eeaEsriMap', {'extent': geometricExtent,
+    var map_id = self.id.substr(1, self.id.length);
+    self.map = new esri.Map(map_id, {'extent': geometricExtent,
                                            'wrapAround180': true,
                                            'fadeOnZoom': true,
                                            'force3DTransforms': true,
@@ -1891,7 +1904,7 @@ EEAGeotags.View.prototype = {
         EEAGeotags.map.centerAndZoom(EEAGeotags.map.extent.getCenter(), 2);
 
         dojo.ready(function(){
-            dojo.connect(dijit.byId('eeaEsriMap'), 'resize', self.map, self.map.resize);
+            dojo.connect(dijit.byId(self.id), 'resize', self.map, self.map.resize);
             var resize = self.settings.infoWindowSize;
                 resize = resize || [140, 100];
             self.map.infoWindow.resize(resize[0], resize[1]);
@@ -1915,8 +1928,9 @@ EEAGeotags.View.prototype = {
 
 // jQuery plugin for EEAGeotags.View
 jQuery.fn.EEAGeotagsView = function(options){
-  return this.each(function(){
+  return this.each(function(i){
     var context = jQuery(this).addClass('eea-ajax');
+        context.count = i;
     var geoview = new EEAGeotags.View(context, options);
     context.data('EEAGeotagsView', geoview);
   });
